--- a/app/src/main/res/layout/fragment_nav_head.xml
+++ b/app/src/main/res/layout/fragment_nav_head.xml
@@ -5,14 +5,78 @@
              tools:context="cn.people.weever.fragment.NavHeadFragment">
 
     <LinearLayout
-        android:id="@+id/ll_nav_head"
+        android:id="@+id/ll_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView 
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/dim10"
+        android:paddingRight="@dimen/dim10"
+        android:background="@color/white"
+        android:layout_alignParentTop="true"
+        android:visibility="visible">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DEMO 1"
-            />
+            android:layout_height="@dimen/dim30">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="公里数"/>
+            <TextView
+                android:id="@+id/txtAllDistance"
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text=""/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="总耗时"/>
+
+            <TextView
+                android:id="@+id/txtAllTime"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center_vertical"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim30">
+            <TextView
+                android:id="@+id/txtAllWaitTime"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="等待时间"/>
+            <TextView
+                android:id="@+id/txtAllWaitAmount"
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text=""/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="等待金额"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text=""/>
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
