--- a/app/src/main/res/layout/fragment_nav_footer.xml
+++ b/app/src/main/res/layout/fragment_nav_footer.xml
@@ -15,6 +15,7 @@
         android:padding="2dp">
 
         <LinearLayout
+            android:id="@+id/ll_src_dest_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -73,11 +74,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <ImageView
-                android:layout_width="@dimen/dim48"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_action_turn_left"
-                android:visibility="gone"/>
         </LinearLayout>
 
         <RadioGroup
@@ -124,6 +120,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:id="@+id/ll_operate"
             android:layout_height="@dimen/dim36"
             android:layout_margin="@dimen/dim10">
 
