--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -269,7 +269,7 @@
                         android:layout_marginRight="@dimen/dim10"
                         android:layout_weight="2"
                         android:gravity="right|center"
-                        android:text="折扣前费用"
+                        android:text="折扣前费用(할인전가격)"
                         android:textSize="18sp"/>/>
 
                     <TextView
@@ -294,7 +294,7 @@
                         android:gravity="right|center"
                         android:layout_height="match_parent"
                         android:layout_marginRight="@dimen/dim10"
-                        android:text="折扣后费用"
+                        android:text="折扣后费用(할인후가격)"
                         android:textSize="18sp"/>/>
 
                     <TextView
