--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -27,4 +27,15 @@
         </menu>
     </item>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_clock_in"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="首" />
+        <item
+            android:id="@+id/nav_punch_out"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="我" />
+    </group>
+
 </menu>
