--- a/app/src/main/res/layout/act_clock_in.xml
+++ b/app/src/main/res/layout/act_clock_in.xml
@@ -5,18 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin"
     tools:context="cn.people.weever.activity.login.LoginActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dim10"
-        android:src="@drawable/ic_login"/>
-
+    <include layout="@layout/inc_toolbar_title"></include>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,6 +61,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dim48"
         android:layout_margin="@dimen/dim48"
-        android:text="clockin"
+        android:text="@string/work_clock_in"
     />
 </LinearLayout>
