--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,7 +17,7 @@
             android:title="设置" />
     </group>
 
-    <item android:title="路线">
+    <item android:title="其它">
         <menu>
 
             <item
@@ -31,11 +31,11 @@
         <item
             android:id="@+id/nav_clock_in"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="首" />
+            android:title="@string/work_clock_in" />
         <item
             android:id="@+id/nav_punch_out"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="我" />
+            android:title="@string/work_punch_out" />
     </group>
 
 </menu>
