--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -37,4 +37,11 @@
         android:visibility="visible"
         android:text="" />
 
+    <TextView
+        android:id="@+id/txt_car_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:text="" />
+
 </LinearLayout>
