--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -310,7 +310,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="left|center"
-                                android:text="时长费用:"/>
+                                android:text="总时长:"/>
 
                             <TextView
                                 android:id="@+id/tv_expire_time_cose"
