--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -392,6 +392,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="RMB"/>
                 </LinearLayout>
 
@@ -428,6 +429,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="RMB"/>
                 </LinearLayout>
 
@@ -464,6 +466,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="RMB"/>
                 </LinearLayout>
 
