--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -349,6 +349,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="15"
                         android:textSize="18sp"/>
 
