--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -248,12 +248,26 @@
                         android:text="会员名称(회원명칭)"
                         android:textSize="12sp"/>
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dim5"
+                        android:gravity="right|center">
+                        <Spinner
+                            android:id="@+id/spn_member"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/dim36"
+                            android:layout_weight="1"
+                            android:entries="@array/settlement"/>
+                    </LinearLayout>
                     <TextView
                         android:id="@+id/tv_member_name"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:gravity="right|center"
                         android:layout_height="@dimen/dim48"
+                        android:layout_weight="1"
+                        android:visibility="gone"
+                        android:gravity="right|center"
                         android:text="三星"
                         android:textColor="@color/red"
                         android:textSize="12sp"/>
