--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -5,15 +5,15 @@
 
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_action_home"
             android:title="首页" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_action_news"
             android:title="我的订单" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_action_settings"
             android:title="设置" />
     </group>
 
@@ -22,7 +22,7 @@
 
             <item
                 android:id="@+id/nav_nav"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_action_car"
                 android:title="导航" />
         </menu>
     </item>
@@ -30,11 +30,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_clock_in"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_action_clock"
             android:title="@string/work_clock_in" />
         <item
             android:id="@+id/nav_punch_out"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_action_coffee"
             android:title="@string/work_punch_out" />
     </group>
 
